--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,15 @@
 		"src/**/*"
 	],
 	"exclude": [
-		"node_modules",
+		"node_modules"
 	],
 	"compilerOptions": {
-		"baseUrl": "./src",
-		"noImplicitAny": true,
 		"target": "es5",
-		"allowJs": true,
+		"baseUrl": "./",  // all paths are relative to the baseUrl
+        "paths": {
+            "~/*" : ["*"]   // resolve any `~/foo/bar` to `<baseUrl>/foo/bar`
+        }
+		// "noImplicitAny": true,
+		// "allowJs": true
 	}
 }
