--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,10 @@
 		"node_modules"
 	],
 	"compilerOptions": {
-		"target": "es5",
-		"baseUrl": "./",  // all paths are relative to the baseUrl
-        "paths": {
-            "~/*" : ["*"]   // resolve any `~/foo/bar` to `<baseUrl>/foo/bar`
-        }
-		// "noImplicitAny": true,
-		// "allowJs": true
+		"module": "es6",
+		"target": "es3",
+		"allowJs": true,
+		"outDir": "./dist/",
+		"sourceMap": true,
 	}
 }
