--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,16 +4,33 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+		// {
+		// 	"type": "chrome",
+		// 	"request": "attach",
+		// 	"name": "Launch Chrome ",
+		// 	"port": 9222,
+		// 	"url": "http://192.168.20.36:3000/dist/__test__/shape/index.html",
+		// 	"pathMapping": {
+		// 		"/": "${workspaceFolder}"
+		// 	}
+		// 	// "webRoot": "${workspaceFolder}/dist"
+		// }
+
 		{
-			"type": "chrome",
-			"request": "launch",
-			"name": "Launch Chrome ",
-			"url": "http://192.168.20.36:3000/dist/__test__/shape/index.html",
-			"pathMapping": {
-				"/": "${workspaceFolder}"
-				// "/${workspaceFolder}": "${workspaceFolder}/dist"
-			}
-			// "webRoot": "${workspaceFolder}/dist"
-		}
+            "name": "Attach",
+            "type": "chrome",
+            "request": "attach",
+            "port": 9222,
+            "url": "http://192.168.20.36:3000/dist/__test__/rect/index.html",
+            "webRoot": "${workspaceFolder}"
+        },
+        {
+            "name": "Attach to url with files served from ./out",
+            "type": "chrome",
+            "request": "attach",
+            "port": 9222,
+            "url": "http://192.168.20.36:3000/dist/__test__/rect/index.html",
+			"webRoot": "${workspaceFolder}",
+        }
     ]
 }
