--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,7 +30,7 @@
             "request": "attach",
             "port": 9222,
             "url": "http://192.168.20.36:3000/dist/__test__/rect/index.html",
-			"webRoot": "${workspaceFolder}",
+			"webRoot": "${workspaceFolder}"
         }
     ]
 }
