--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
 	],
 	"compilerOptions": {
 		"module": "es6",
-		"target": "es3",
+		"target": "es5",
 		"allowJs": true,
 		"outDir": "./dist/",
-		"sourceMap": true,
+		"sourceMap": true
 	}
 }
