--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "devDependencies": {
+    "ajv": "^5.5.2",
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.2.3",
     "typescript": "^2.6.2"
   },
   "scripts": {
     "start": "webpack --watch",
-	"server": "node server.js",
-	"test": "jasmine"
+    "server": "node server.js",
+    "test": "jasmine"
   },
   "name": "ts_draw",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "@types/ajv": "^1.0.0",
     "@types/lodash": "^4.14.91",
+    "ajv": "^5.5.2",
     "browser-sync": "^2.19.0",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.3.1",
