--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,14 +6,13 @@
     "configurations": [
 		// {
 		// 	"type": "chrome",
-		// 	"request": "attach",
+		// 	"request": "launch",
 		// 	"name": "Launch Chrome ",
 		// 	"port": 9222,
-		// 	"url": "http://localhost:3000/dist/__test__/shape/index.html",
+		// 	"url": "http://localhost:3000/dist/__test__/select/index.html",
 		// 	"pathMapping": {
 		// 		"/": "${workspaceFolder}"
-		// 	}
-		// 	// "webRoot": "${workspaceFolder}/dist"
+		// 	},
 		// }
 
 		{
@@ -21,16 +20,16 @@
             "type": "chrome",
             "request": "attach",
             "port": 9222,
-            "url": "http://localhost:3000/dist/__test__/select/index.html",
+			"url": "http://localhost:3000/dist/__test__/select/index.html",
             "webRoot": "${workspaceFolder}"
         },
-        {
-            "name": "Attach to url with files served from ./out",
-            "type": "chrome",
-            "request": "attach",
-            "port": 9222,
-            "url": "http://localhost:3000/dist/__test__/select/index.html",
-			"webRoot": "${workspaceFolder}"
-        }
+        // {
+        //     "name": "Attach to url with files served from ./out",
+        //     "type": "chrome",
+        //     "request": "attach",
+        //     "port": 9222,
+        //     "url": "http://localhost:3000/dist/__test__/select/index.html",
+		// 	"webRoot": "${workspaceFolder}"
+        // }
     ]
 }
