--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
     "ajv": "^5.5.2",
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.2.3",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "typescript-eslint-parser": "^12.0.0"
   },
   "scripts": {
     "start": "npm run server | npm run dev",
     "dev": "webpack --watch",
     "server": "node server.js",
-    "test": "jasmine"
+    "test": "jasmine",
+    "eslint": "eslint src/**/*",
+    "eslintFix": "eslint src/**/* --fix"
   },
   "name": "ts_draw",
   "version": "1.0.0",
@@ -19,6 +22,7 @@
     "browser-sync": "^2.19.0",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.3.1",
+    "eslint": "^4.16.0",
     "gulp-sourcemaps": "^2.6.2",
     "gulp-tsb": "^2.0.5",
     "jasmine": "^2.8.0",
