--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
 		"target": "es5",
 		"allowJs": true,
 		"outDir": "./dist/",
-		"sourceMap": true
+		"sourceMap": true,
+		"lib": [
+			"dom",
+			"es2016"
+		],
 	}
 }
