[Abbreviation] Developing-Restrict zooming region & Sync view box

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
 		"src/**/*"
 	],
 	"exclude": [
-		"node_modules"
+		"node_modules",
+		"src/__tmp__"
 	],
 	"compilerOptions": {
 		"module": "es6",
