--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,25 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+		// {
+		// 	"type": "chrome",
+		// 	"request": "launch",
+		// 	"name": "Launch Chrome ",
+		// 	"port": 9222,
+		// 	// "url": "http://localhost:8600/build/__test__/selector/index.html",
+		// 	"url": "http://localhost:8600/build/__test__/elements/Point/index.html",
+		// 	"pathMapping": {
+		// 		"/": "${workspaceFolder}"
+		// 	},
+		// },
+
 		{
 			"type": "chrome",
 			"request": "launch",
 			"name": "Launch Chrome ",
 			"port": 9222,
 			// "url": "http://localhost:8600/build/__test__/selector/index.html",
-			"url": "http://localhost:8600/build/__test__/comprehensive/index.html",
+			"url": "http://localhost:8600/build/__test__/elements/Polygon/index.html",
 			"pathMapping": {
 				"/": "${workspaceFolder}"
 			},
