--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,8 @@
 			// "url": "http://localhost:8600/build/__test__/elements/polygon/index.html",
 			// "url": "http://localhost:8600/build/__test__/elements/rect/index.html",
 			// "url": "http://localhost:8600/build/__test__/elements/line/index.html",
-			"url": "http://localhost:8600/build/__test__/elements/text/index.html",
+			// "url": "http://localhost:8600/build/__test__/elements/text/index.html",
+			"url": "http://localhost:8600/build/__test__/elements/polyline/index.html",
 			"pathMapping": {
 				"/": "${workspaceFolder}"
 			},
