Refactor: [Performance] Optmize algorithm of 'intersect' & Optimize methods about 'clone'

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,8 @@
 			// "url": "http://localhost:8600/build/__test__/elements/line/index.html",
 			// "url": "http://localhost:8600/build/__test__/elements/text/index.html",
 			// "url": "http://localhost:8600/build/__test__/elements/polyline/index.html",
-			"url": "http://localhost:8600/build/__test__/elements/orthogonalLine/index.html",
+			// "url": "http://localhost:8600/build/__test__/elements/orthogonalLine/index.html",
+			"url": "http://localhost:8600/build/__test__/elements/orthogonalLine-updateCornerSegments/index.html",
 			"pathMapping": {
 				"/": "${workspaceFolder}"
 			},
