Fix: [OrthogonalLine] Hadn't consider the special situation where start line or end line is simple line

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,8 +16,9 @@
 			// "url": "http://localhost:8600/build/__test__/elements/line/index.html",
 			// "url": "http://localhost:8600/build/__test__/elements/text/index.html",
 			// "url": "http://localhost:8600/build/__test__/elements/polyline/index.html",
-			"url": "http://localhost:8600/build/__test__/elements/orthogonalLine/index.html",
+			// "url": "http://localhost:8600/build/__test__/elements/orthogonalLine/index.html",
 			// "url": "http://localhost:8600/build/__test__/elements/orthogonalLine-updateCornerSegments/index.html",
+			"url": "http://localhost:8600/build/__test__/elements/orthogonalLine-simple-line/index.html",
 			"pathMapping": {
 				"/": "${workspaceFolder}"
 			},
