--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.2.3",
     "typescript": "^2.6.2",
-    "typescript-eslint-parser": "^12.0.0"
+    "typescript-eslint-parser": "^12.0.0",
+    "url-loader": "^1.0.1"
   },
   "scripts": {
     "start": "npm run server | npm run dev",
