--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,9 @@
 			// "url": "http://localhost:8600/build/__test__/elements/orthogonalLine-updateCornerSegments/index.html",
 			// "url": "http://localhost:8600/build/__test__/elements/orthogonalLine-simple-line/index.html",
 			// "url": "http://localhost:8600/build/__test__/elements/text/index.html",
-			"url": "http://localhost:8600/build/__test__/elements/drawImage/index.html",
+			// "url": "http://localhost:8600/build/__test__/elements/drawImage/index.html",
+			// "url": "http://localhost:8600/build/__test__/exportData/index.html",
+			"url": "http://localhost:8600/build/__test__/importData/index.html",
 		},
     ]
 }
