--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "devDependencies": {
     "@types/lodash": "^4.14.116",
     "ajv": "^5.5.2",
+    "cross-env": "^5.2.0",
     "file-loader": "^1.1.11",
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.2.3",
+    "ts-loader": "^4.5.0",
     "typescript": "^2.6.2",
     "typescript-eslint-parser": "^12.0.0",
-    "url-loader": "^1.0.1"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.17.1",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
     "start": "npm run server | npm run dev",
-    "dev": "webpack --watch",
+    "dev": "cross-env NODE_ENV=development webpack --watch",
+    "build": "webpack",
     "server": "node server.js",
     "test": "jasmine",
     "eslint": "eslint src/**/*",
@@ -29,9 +35,7 @@
     "gulp-tsb": "^2.0.5",
     "jasmine": "^2.8.0",
     "lodash": "^4.17.4",
-    "rimraf": "^2.6.2",
-    "ts-loader": "^3.2.0",
-    "webpack": "^3.10.0"
+    "rimraf": "^2.6.2"
   },
   "keywords": [],
   "author": "",
