--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "webpack-cli": "^3.1.0"
   },
   "scripts": {
-    "start": "npm run server | npm run dev",
+    "start": "npm run server & npm run dev",
     "dev": "cross-env NODE_ENV=development webpack --watch",
     "build": "webpack",
     "server": "node server.js",
