--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"outDir": "./build/",
 		"sourceMap": true,
 		"lib": ["dom", "es2016"],
-		"typeRoots": ["../node_modules/@types", "src/typings/**"],
+		"typeRoots": ["node_modules/@types", "src/typings/**/*"],
 		"allowSyntheticDefaultImports": true
 	}
 }
