--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"sourceMap": true,
 		"lib": ["dom", "es2016"],
 		"typeRoots": ["node_modules/@types", "src/typings/**/*"],
-		"allowSyntheticDefaultImports": true
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true
 	}
 }
